[workspace]
resolver = "2"

members = [
    "node",
    "pallets/*",
    "runtime",
]

[workspace.package]
authors = ["ORIUM Team <team@orium.network>"]
edition = "2021"
homepage = "https://orium.network"
license = "MIT"
repository = "https://github.com/orium-network/orium-blockchain"

[workspace.lints]
rust.missing_docs = "allow"

[workspace.dependencies]
# External crates
clap = { version = "4.5.3" }
codec = { version = "3.6.12", package = "parity-scale-codec", default-features = false }
futures = { version = "0.3.30" }
getrandom = { version = "0.3", features = ["wasm_js"] }
jsonrpsee = { version = "0.24.9", default-features = false }
proptest = { version = "1.4.0" }
scale-info = { version = "2.11.1", default-features = false }
serde_json = { version = "1.0.114", default-features = false }

# Substrate (Polkadot SDK) - versions matching polkadot-v1.16.9
frame-benchmarking = { version = "38.1.0", default-features = false }
frame-benchmarking-cli = { version = "43.1.0" }
frame-executive = { version = "38.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
frame-support = { version = "38.2.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
frame-system-benchmarking = { version = "38.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
pallet-babe = { version = "38.0.0", default-features = false }
pallet-balances = { version = "39.0.1", default-features = false }
pallet-grandpa = { version = "38.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment = { version = "38.0.2", default-features = false }
pallet-transaction-payment-rpc = { version = "41.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }
sc-basic-authorship = { version = "0.45.0" }
sc-cli = { version = "0.47.0" }
sc-client-api = { version = "37.0.0" }
sc-consensus = { version = "0.44.0" }
sc-consensus-babe = { version = "0.45.0" }
sc-consensus-grandpa = { version = "0.30.0" }
sc-executor = { version = "0.40.1" }
sc-network = { version = "0.45.6" }
sc-offchain = { version = "40.0.0" }
sc-service = { version = "0.46.0" }
sc-telemetry = { version = "25.0.0" }
sc-transaction-pool = { version = "37.0.0" }
sc-transaction-pool-api = { version = "37.0.0" }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.1" }
sp-consensus-babe = { version = "0.40.0", default-features = false }
sp-consensus-grandpa = { version = "21.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-genesis-builder = { version = "0.15.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.2", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.5", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-timestamp = { version = "34.0.0" }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0" }
substrate-frame-rpc-system = { version = "39.0.0" }
substrate-wasm-builder = { version = "24.0.2", default-features = false }

# Local crates
orium-runtime = { path = "runtime" }
pallet-template = { path = "pallets/template" }
pallet-orium-token = { path = "pallets/orium-token" }
pallet-collateral-engine = { path = "pallets/collateral-engine" }
pallet-dusd = { path = "pallets/dusd" }
pallet-deur = { path = "pallets/deur" }

[patch.crates-io]
# Substrate core primitives
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }

# Frame pallets and support
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }

# Standard pallets
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }

# Substrate client
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }

# Substrate build utilities
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.9" }
